# httpie

./: .gitignore  Cargo.toml  README.md  cover_ai_test.sh
src/: main.rs
src/utils/: command_args.rs  http_client.rs  kv_pair.rs  mod.rs  printer.rs  validator.rs
