[package]
name = "httpie"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
colored = "2"
jsonxf = "1.1"
mime = "0.3"
tokio = { version = "1", features = ["full"] }
once_cell = "1.18"
